--- a/pricing.html
+++ b/pricing.html
@@ -35,7 +35,7 @@
       <div class="card shadow-sm">
         <div class="card-body">
           <h5 class="card-title">Basic VPS</h5>
-          <p>4GB RAM • 2vCPU • 50GB SSD<br><strong>₹299/month</strong></p>
+          <p>4GB RAM • 2vCPU(Dedicated) • 128GB SSD<br><strong>₹499/month</strong></p>
           <a href="https://t.me/its_damiann" class="btn btn-success">Buy Now</a>
         </div>
       </div>
@@ -44,7 +44,7 @@
       <div class="card shadow-sm">
         <div class="card-body">
           <h5 class="card-title">Pro RDP</h5>
-          <p>8GB RAM • Admin Access • Fast Upload<br><strong>₹499/month</strong></p>
+          <p>8GB RAM • 4vCPU(Dedicated) • 150GB SSD<br><strong>₹899/month</strong></p>
           <a href="https://t.me/its_damiann" class="btn btn-success">Buy Now</a>
         </div>
       </div>
@@ -53,7 +53,7 @@
       <div class="card shadow-sm">
         <div class="card-body">
           <h5 class="card-title">Cloud Beast</h5>
-          <p>32GB RAM • 8vCPU • Unmetered Bandwidth<br><strong>₹1099/month</strong></p>
+          <p>32GB RAM • 8vCPU(Dedicated) • 128GB SSD<br><strong>₹1699/month</strong></p>
           <a href="https://t.me/its_damiann" class="btn btn-success">Buy Now</a>
         </div>
       </div>
