--- a/index.html
+++ b/index.html
@@ -1,19 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Server Bazaar</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
-</head>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f5f5;
+    }
 
+    .hero {
+      background: linear-gradient(to right, #1e3c72, #2a5298);
+      color: white;
+      padding: 100px 0;
+      position: relative;
+    }
+
+    .hero h1 {
+      font-weight: 700;
+      font-size: 3rem;
+    }
+
+    .hero p.lead {
+      font-size: 1.3rem;
+      max-width: 700px;
+      margin: auto;
+    }
+
+    .hero .btn-group {
+      margin-top: 30px;
+    }
+
+    .btn-lg {
+      padding: 12px 30px;
+      font-size: 1.1rem;
+    }
+
+    .btn-success {
+      background-color: #00b894;
+      border: none;
+    }
+
+    .btn-outline-light:hover {
+      background-color: #ffffff;
+      color: #00b894;
+    }
+
+    .scroll-down {
+      margin-top: 60px;
+      font-size: 1.4rem;
+      color: white;
+      opacity: 0.7;
+      transition: 0.3s ease;
+    }
+
+    .scroll-down:hover {
+      opacity: 1;
+    }
+
+    .footer {
+      background: #121212;
+      color: #aaa;
+      padding: 20px 0;
+    }
+  </style>
+</head>
 <body>
 
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Server Bazaar</a>
+    <a class="navbar-brand" href="#">Server Bazaar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,28 +88,34 @@
   </div>
 </nav>
 
-<section class="hero text-center text-white py-5" style="background: linear-gradient(to right, #2c3e50, #000000);">
+<!-- Hero Section -->
+<section class="hero text-center">
   <div class="container">
-    <h1 class="display-4">Welcome to <span class="text-success">Server Bazaar</span></h1>
-    <p class="lead">Blazing-fast VPS, RDP & Cloud Accounts — Built for Developers, Resellers & Businesses</p>
-    <div class="mt-4">
-      <a href="https://t.me/its_damiann" class="btn btn-success btn-lg me-2"><i class="fa-solid fa-bolt"></i> Buy Now</a>
-      <br>
-      <a href="https://t.me/DeadlineTechSupport" class="btn btn-outline-light btn-lg me-2"><i class="fa-solid fa-headset"></i> Support</a>
-      <a href="https://t.me/ServerBazaar" class="btn btn-outline-light btn-lg"><i class="fab fa-telegram"></i> Join Channel</a>
+    <h1>Welcome to <span class="text-warning">Server Bazaar</span></h1>
+    <p class="lead mt-3">Blazing-fast VPS, RDP & Cloud Accounts — Built for Developers, Resellers & Businesses 🌍</p>
+    <div class="btn-group d-flex justify-content-center flex-wrap gap-3">
+      <a href="https://t.me/its_damiann" class="btn btn-success btn-lg"><i class="fa-solid fa-bolt me-1"></i> Buy Now</a>
+      <a href="https://t.me/DeadlineTechSupport" class="btn btn-outline-light btn-lg"><i class="fa-solid fa-headset me-1"></i> Support</a>
+      <a href="https://t.me/ServerBazaar" class="btn btn-outline-light btn-lg"><i class="fab fa-telegram me-1"></i> Join Channel</a>
     </div>
+    <a href="#next" class="scroll-down d-block mt-5"><i class="fas fa-chevron-down"></i> Explore Plans</a>
   </div>
 </section>
 
-<footer class="footer text-center text-white bg-dark mt-5 py-3">
+<!-- Placeholder for Next Section -->
+<section id="next" class="container py-5 text-center">
+  <h2 class="mb-4">Why Choose Server Bazaar?</h2>
+  <p>We provide powerful VPS, RDP, and Cloud solutions with instant delivery, root access, and full scalability at unbeatable prices. Whether you're hosting websites, running bots, or reselling – we’re your go-to platform. 💡</p>
+</section>
+
+<!-- Footer -->
+<footer class="footer text-center">
   <div class="container">
-    <p class="mb-0">Made with ❤️ by <strong>Team DeadlineTech</strong></p>
+    <p class="mb-1">Made with ❤️ by <strong>Team DeadlineTech</strong></p>
     <small>Payments Accepted: UPI, Binance | Instant Delivery | Premium Support</small>
   </div>
 </footer>
 
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
